# dbt-oracle-adapter

./: .gitignore  README.md  create_adapter_plugins.py  pyproject.toml
.github/workflows/: Deploy.yaml  ci_pipeline.yaml  deploy.yaml  tests.yaml
dbt/adapters/noracle/: __init__.py  connections.py  impl.py  relation.py
dbt/adapters/oracle/: __init__.py  connections.py  impl.py  relation.py
dbt/include/noracle/: dbt_project.yml
dbt/include/noracle/macros/: adapters.sql  catalog.sql  not_implemented.sql  schema_tests.sql  strategies.sql
dbt/include/noracle/macros/materializations/: incremental.sql  seed.sql  snapshot.sql  table.sql  view.sql
dbt/include/oracle/: dbt_project.yml
dbt/include/oracle/macros/: adapters.sql  catalog.sql  not_implemented.sql  schema_tests.sql  strategies.sql
dbt/include/oracle/macros/materializations/: incremental.sql  seed.sql  snapshot.sql  table.sql  view.sql
specs/: oracle.dbtspec
test_project/: dbt_project.yml
test_project/data/: added.csv  base.csv  newcolumns.csv
test_project/models/example/: bank_transfer_payments.sql  coupon_payments.sql  credit_card_payments.sql  ephemeral.sql  ephemeral_recurse.sql  large_payments.sql  my_first_dbt_model.sql  my_second_dbt_model.sql  schema.yml
test_project/snapshots/: date_snap.sql
test_project/tests/: assert_large_payments_are_large.sql  ephemeral_data_test.sql
