[tool.poetry]
name = "dbt-oracledb"
version = "0.1.0"
description = "DBT adapter for Oracle databases"
authors = ["emacha <15370927+emacha@users.noreply.github.com>"]

packages = [
    { include = "dbt" },
]

[tool.poetry.dependencies]
python = "^3.8"
dbt = "^0.19.0"
cx-Oracle = "^8.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
mypy = "^0.812"
isort = "^5.8.0"
black = "^20.8b1"
debugpy = "^1.2.1"
flake8 = "^3.9.0"
pytest-dbt-adapter = "^0.4.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
